src/styles.css
.container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10vh;
}

.cnvs {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.data div {
    margin: 10px;
}

#canvas {
    border: 1px solid black;
}

